add permissions write to build

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -6,6 +6,11 @@ on:
       - main  # Set a branch that will trigger a deployment
   pull_request:
 
+permissions:
+  pull-requests: write
+  issues: write
+  repository-projects: write
+
 jobs:
   deploy:
     runs-on: ubuntu-22.04
