--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://julionico.github.io/blog/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme = "aether"
